--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Vue Carousel</title>
 </head>
@@ -13,12 +14,16 @@
         <div class="items">
             <div class="item-active">
                 <img :src="slides[activeSlide].image" :alt="slides[activeSlide].title">
+                <div class="text-cont">
+                    <h3>{{slides[activeSlide].title}}</h3>
+                    <p>{{slides[activeSlide].text}}</p>
+                </div>
             </div>
 
         </div>
         <div class="thumbs">
-            <div @click="prevSlide" class="prev"></div>
-            <div @click="nextSlide" class="next"></div>
+            <div @click="prevSlide" class="prev"><i class="fas fa-chevron-up"></i></div>
+            <div @click="nextSlide" class="next"><i class="fas fa-chevron-down"></i></div>
             <div v-for='slide, i in slides' class="thumb" :class="i === activeSlide ? 'active' : '' ">
                 <img :src="slide.image" :alt="slide.title">
             </div>
